objects/smagicinteract__Incoming_SMS__c.object
<CustomObject>
    <fields>
        <fullName>Account_owner__c</fullName>
        <formula>Contact__r.Account.Owner.FirstName  &amp; &quot; &quot; &amp;  Contact__r.Account.Owner.LastName</formula>
        <label>Account owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualCreatedDate__c</fullName>
        <label>ActualCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Inbound_Number__c</fullName>
        <description>You can receive incoming sms to this number.</description>
        <label>Inbound Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__actionTaken__c</fullName>
        <label>actionTaken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__external_field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>external field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__taskId__c</fullName>
        <label>taskId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Incoming SMS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>Account_owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__actionTaken__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/5/2016 12:00 AM</value>
        </filters>
        <label>2016 Sales inbox</label>
    </listViews>
    <listViews>
        <fullName>All3</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>Contact__c</columns>
        <columns>Account_owner__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>TS texts</label>
    </listViews>
    <listViews>
        <fullName>BHITCH_Incoming_SMS_to_deal_with</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>Account_owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_owner__c</field>
            <operation>equals</operation>
            <value>Iryna Libych</value>
        </filters>
        <label>Iryna Incoming SMS to deal with</label>
        <sharedTo>
            <group>MarketingNorthEastLondon</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BRAD_Incoming_SMS_2016</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>Account_owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_owner__c</field>
            <operation>equals</operation>
            <value>Shakeel Aziz,Clare Higgins,Sonya Kumar,Lucy Neal</value>
        </filters>
        <filters>
            <field>Account_owner__c</field>
            <operation>equals</operation>
            <value>Ginevra Hall,Thomas Gatehouse,Archie Moss</value>
        </filters>
        <label>BRAD Incoming SMS 2016</label>
        <sharedTo>
            <group>MarketingNorthEastLondon</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Colleen_Test</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>Contact__c</columns>
        <columns>Account_owner__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Yes NWL Texts to Monitor</label>
    </listViews>
    <listViews>
        <fullName>Dealt_with</fullName>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__actionTaken__c</field>
            <operation>contains</operation>
        </filters>
        <label>Dealt with</label>
    </listViews>
    <listViews>
        <fullName>HABAN_Incoming_SMS_to_deal_with</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>Account_owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>enrico Incoming SMS to deal with</label>
        <sharedTo>
            <group>MarketingNorthEastLondon</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hen_Incoming_SMS_to_deal_with</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>Account_owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_owner__c</field>
            <operation>equals</operation>
            <value>Ian Campbell,Cardy Lee,Monica Mason</value>
        </filters>
        <filters>
            <field>Account_owner__c</field>
            <operation>equals</operation>
            <value>Lee Waller,Emma Fox</value>
        </filters>
        <label>Hen Incoming SMS to deal with</label>
        <sharedTo>
            <group>MarketingNorthEastLondon</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Incoming_SMS_Sales</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Account_owner__c</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__actionTaken__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Incoming SMS - Sales</label>
    </listViews>
    <listViews>
        <fullName>Incoming_SMS_Sales_JH</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Account_owner__c</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__actionTaken__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>Account_owner__c</field>
            <operation>contains</operation>
            <value>Kate Weaver,Sanshia Blake,Joshua Howells,Stephen Hanson</value>
        </filters>
        <label>Incoming SMS - Sales-JH</label>
    </listViews>
    <listViews>
        <fullName>Incoming_SMS_Sales_SoCo</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Account_owner__c</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__actionTaken__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>Account_owner__c</field>
            <operation>contains</operation>
            <value>Rachel Capper,Tom Perrin,Laurence Hickin,Tessa McGrath,Nathan Alleyne</value>
        </filters>
        <label>Incoming SMS - Sales-SoCo</label>
    </listViews>
    <listViews>
        <fullName>JJ_Incoming_TXT</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>Contact__c</columns>
        <columns>Account_owner__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead__c</field>
            <operation>equals</operation>
            <value>Josh Johnson</value>
        </filters>
        <label>JJ: Incoming TXT</label>
    </listViews>
    <listViews>
        <fullName>JJ_Incoming_TXT1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>Contact__c</columns>
        <columns>Account_owner__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_owner__c</field>
            <operation>equals</operation>
        </filters>
        <label>JJ: Incoming TXT</label>
    </listViews>
    <listViews>
        <fullName>JJ_Incoming_TXT2</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>Contact__c</columns>
        <columns>Account_owner__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>JJ: Incoming TXT</label>
    </listViews>
    <listViews>
        <fullName>JJ_Incoming_TXT3</fullName>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>Contact__c</columns>
        <columns>Account_owner__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>ActualCreatedDate__c</columns>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>JJ: Incoming TXT</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Incoming SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>